welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: unclosed character literal
    if ((day==0) || (day==6)) {return 'off'}
                                          ^alarmClock:4: error: unclosed character literal
    else {return '10:00'}}
                 ^alarmClock:4: error: Non-zero integral values may not have a leading zero.
    else {return '10:00'}}
                     ^alarmClock:4: error: unclosed character literal
    else {return '10:00'}}
                       ^alarmClock:6: error: unclosed character literal
    if ((day==0) || (day==6)) {return '10:00'}
                                      ^alarmClock:6: error: Non-zero integral values may not have a leading zero.
    if ((day==0) || (day==6)) {return '10:00'}
                                          ^alarmClock:6: error: unclosed character literal
    if ((day==0) || (day==6)) {return '10:00'}
                                            ^alarmClock:7: error: unclosed character literal
    else {return '7:00'}}
                 ^alarmClock:7: error: Non-zero integral values may not have a leading zero.
    else {return '7:00'}}
                    ^alarmClock:7: error: unclosed character literal
    else {return '7:00'}}
                      ^alarmClock:-6: error: Missing closing brace `}' assumed here
try {
^alarmClock:1: error: expected class or object definition
def alarmClock(day:Int, vacation:Boolean): String = {
^alarmClock:3: error: unclosed character literal
    if ((day==0) || (day==6)) {return 'off'}
                                          ^alarmClock:4: error: unclosed character literal
    else {return '10:00'}}
                 ^alarmClock:4: error: Non-zero integral values may not have a leading zero.
    else {return '10:00'}}
                     ^alarmClock:4: error: unclosed character literal
    else {return '10:00'}}
                       ^alarmClock:6: error: unclosed character literal
    if ((day==0) || (day==6)) {return '10:00'}
                                      ^alarmClock:6: error: Non-zero integral values may not have a leading zero.
    if ((day==0) || (day==6)) {return '10:00'}
                                          ^alarmClock:6: error: unclosed character literal
    if ((day==0) || (day==6)) {return '10:00'}
                                            ^alarmClock:7: error: Missing closing brace `}' assumed here
    else {return '7:00'}}
    ^alarmClock:7: error: unclosed character literal
    else {return '7:00'}}
                 ^alarmClock:7: error: Non-zero integral values may not have a leading zero.
    else {return '7:00'}}
                    ^alarmClock:7: error: unclosed character literal
    else {return '7:00'}}
                      ^alarmClock:8: error: Missing closing brace `}' assumed here
} 
^alarmClock:8: error: Missing closing brace `}' assumed here
} 
^